[gd_scene load_steps=58 format=3 uid="uid://bimqvxarfp4xy"]

[ext_resource type="Script" path="res://src/Scripts/Character.gd" id="1_3tkld"]
[ext_resource type="Texture2D" uid="uid://kysvg1i2dav" path="res://Sprites/knight.png" id="1_giw3n"]
[ext_resource type="AudioStream" uid="uid://ceml0dwvoiw5l" path="res://time_for_adventure.mp3" id="2_shjv8"]
[ext_resource type="PackedScene" uid="uid://cuqpfgivymptq" path="res://src/Scenes/HealthController.tscn" id="3_4p4dx"]
[ext_resource type="AudioStream" uid="uid://blarvx4pcodc8" path="res://Assets/coin_collected.mp3" id="4_jcgfc"]
[ext_resource type="Script" path="res://src/Scripts/GamerState.gd" id="6_73eiy"]
[ext_resource type="Script" path="res://src/state_machine/states/player_state_idle.gd" id="7_ommpl"]
[ext_resource type="Script" path="res://src/state_machine/states/player_state_move.gd" id="8_3q1eh"]
[ext_resource type="Script" path="res://src/state_machine/states/player_state_roll.gd" id="9_t28nu"]
[ext_resource type="Script" path="res://src/state_machine/states/player_state_hit.gd" id="10_uc67k"]
[ext_resource type="Script" path="res://src/state_machine/states/player_state_death.gd" id="11_46ngb"]

[sub_resource type="GDScript" id="GDScript_lmkjx"]
resource_name = "CameraEvents"
script/source = "extends Camera2D

var startZooming = false

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	if(startZooming && self.zoom <= Vector2(3,3)):
		var actualZoom = self.zoom
		self.zoom = Vector2(actualZoom.x + (0.4 * _delta), actualZoom.y + (0.4 * _delta))
	else:
		startZooming = false
func _on_timer_timeout():
	startZooming = true
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mewk"]
size = Vector2(13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dihdx"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywqbq"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oy88"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrkg0"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6utkj"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsu2y"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sly08"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k4hb"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exfyq"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atrpq"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_431al"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr21q"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgcly"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am7gf"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl7y1"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ndx"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4qa5"]
atlas = ExtResource("1_giw3n")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpvvu"]
atlas = ExtResource("1_giw3n")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uovp"]
atlas = ExtResource("1_giw3n")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dirde"]
atlas = ExtResource("1_giw3n")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeckv"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_73fcm"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_amgoj"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl8hg"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gbg6"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi51b"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvy7i"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52t2v"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf7ab"]
atlas = ExtResource("1_giw3n")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd66r"]
atlas = ExtResource("1_giw3n")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mdq6"]
atlas = ExtResource("1_giw3n")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttng0"]
atlas = ExtResource("1_giw3n")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vccwk"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8esa"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4ckx"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlntg"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv0i6"]
atlas = ExtResource("1_giw3n")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj4sv"]
atlas = ExtResource("1_giw3n")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hdpg"]
atlas = ExtResource("1_giw3n")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox8pr"]
atlas = ExtResource("1_giw3n")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vulta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dihdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywqbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oy88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrkg0")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6utkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsu2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sly08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k4hb")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exfyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atrpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_431al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr21q")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgcly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am7gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl7y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8ndx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4qa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpvvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uovp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dirde")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeckv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73fcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amgoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl8hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gbg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvy7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52t2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf7ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd66r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mdq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttng0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vccwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8esa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4ckx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlntg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv0i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj4sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hdpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox8pr")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="GDScript" id="GDScript_eg0l7"]
resource_name = "AnimationManager"
script/source = "extends AnimatedSprite2D

var animation_on_course = 'idle'
const logHeader = '[SPRT]'
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_player_hit():
	self.play(\"hit\")
	animation_on_course = \"hit\"


func _on_animation_finished():
	if (animation_on_course == \"hit\"):
		self.play(animation_on_course)
		animation_on_course = \"idle\"

func _on_player_attack():
	animation_on_course = \"attack\"
	LogDuck.d(logHeader, 'player attacking')
	self.play('attack')
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5eg3"]

[sub_resource type="GDScript" id="GDScript_ne7j2"]
resource_name = "MusicPlayer"
script/source = "extends AudioStreamPlayer2D

func _on_player_start():
	self.play()
"

[sub_resource type="GDScript" id="GDScript_6kfaf"]
resource_name = "CameraEvents"
script/source = "extends Camera2D

var startZooming = false

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	if(startZooming && self.zoom <= Vector2(3,3)):
		var actualZoom = self.zoom
		self.zoom = Vector2(actualZoom.x + (0.4 * _delta), actualZoom.y + (0.4 * _delta))
	else:
		startZooming = false
		
func _on_timer_timeout():
	startZooming = true
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cb4gk"]
bg_color = Color(0.717647, 0.580392, 0.301961, 0.780392)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Character" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_3tkld")
health_controller = ExtResource("3_4p4dx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_1mewk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.76837e-07, 4.76837e-07)
sprite_frames = SubResource("SpriteFrames_vulta")
animation = &"roll"
script = SubResource("GDScript_eg0l7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.606
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_i5eg3")

[node name="CoinCollected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jcgfc")

[node name="IntroMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_shjv8")
volume_db = -39.381
script = SubResource("GDScript_ne7j2")

[node name="HealthController" parent="." instance=ExtResource("3_4p4dx")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
script = SubResource("GDScript_6kfaf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(25, 10)
transform = Transform2D(1, 0, 0, 1, 25, 10)

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = -6.0
offset_right = 96.0
offset_bottom = 49.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cb4gk")

[node name="DineroLabel" type="Label" parent="CanvasLayer"]
offset_right = 93.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.514097, 0.373878, 0.785083, 1)
text = "Monedas : 0"
script = ExtResource("6_y4gm3")

[node name="VidaLabel" type="Label" parent="CanvasLayer"]
offset_left = 1.0
offset_top = 21.0
offset_right = 79.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0.15976, 0.427135, 0.208621, 1)
text = "Vida :  100"
script = ExtResource("7_mneuq")

[node name="GamerStateMachine" type="Node" parent="."]
script = ExtResource("6_73eiy")
initial_state = NodePath("CharacterStateIdle")

[node name="CharacterStateIdle" type="Node" parent="GamerStateMachine"]
script = ExtResource("7_ommpl")

[node name="CharacterStateMove" type="Node" parent="GamerStateMachine"]
script = ExtResource("8_3q1eh")

[node name="CharacterStateRoll" type="Node" parent="GamerStateMachine"]
script = ExtResource("9_t28nu")

[node name="CharacterStateHit" type="Node" parent="GamerStateMachine"]
script = ExtResource("10_uc67k")

[node name="CharacterStateDeath" type="Node" parent="GamerStateMachine"]
script = ExtResource("11_46ngb")

[connection signal="coin_collected" from="." to="CanvasLayer/DineroLabel" method="_on_character_coin_collected"]
[connection signal="start" from="." to="IntroMusic" method="_on_player_start"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="timeout" from="Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="CanvasLayer/VidaLabel" method="_on_area_2d_body_entered"]
